--- a/koenig/kg-simplemde/src/css/simplemde.css
+++ b/koenig/kg-simplemde/src/css/simplemde.css
@@ -6,6 +6,7 @@
 	border-bottom-right-radius: 4px;
 	padding: 10px;
 	font: inherit;
+	z-index: 1;
 }
 
 .CodeMirror-scroll {
@@ -219,7 +220,7 @@
 	top: 0;
 	left: 0;
 	background: #fafafa;
-	z-index: 9999;
+	z-index: 2;
 	overflow: auto;
 	display: none;
 	box-sizing: border-box;
